# pyproject-problem

./: .gitignore  LICENSE  MANIFEST.in  README.md  run.sh  setup.cfg
hello_world_normanius/: __init__.py
