[metadata]
name = hello_world_normanius
version = file: VERSION
url = https://github.com/hirsch-lab/cyminiball
license = MIT
license_file = LICENSE
description = Hello world
long_description = file: README.md
long_description_content_type = text/markdown
author = Normanius

[options]
python_requires = >=3.6
packages = find:
# setup_requires =
#     setuptools>=38.3.0
#     wheel
# install_requires =
#     setuptools
#     wheel
#     importlib-metadata;python_version < "3.8"
